@startuml
hide methods
left to right direction

entity Funcao{
}

object IdentificadorFuncao{
}

object NivelHierarquico{
}

entity Colaborador{
}

entity CatalogoDeServico{
}

entity Servico{
}


entity Formulario{
}

entity FluxoDeAtividade{
}

entity FluxoDeAtividade{
}

object EstadoAtividade{
}

object Delay{
}

class FluxoDeAtividadeSentidoLato{
}

class FluxoDeAtividadeSentidoRestrito{
}

entity Pedido{
}

entity Atividade{
}

class AtividadeManual{
}

class AtividadeAutomatica{
}

object Script{
}

entity Equipa{
}

object Linguagem{
}

object Funcao{
}

entity TipoEquipa{
}

object ScriptValidacaoFormulario{
}

object EstagioPedido{
}

object ResultadoPedido{
}

entity HistoricoPedido{
}

object FeedBack{
}

entity Slot{
}

object IdSlot{
}

object OrdemDeExecucaoAtividade{
}

object EstadoPedido{
}

entity NivelCriticidade{
}

object DesignacaoNivelCriticidade{
}

object ObjetivoEspecifico{
}

'ex: rascunho...'
object EstadoServico {
}

'tipo equipa'

object Cor{
}

object CodigoInternoUnicoTipoEquipa{
}

object DescricaoTipoEquipa{
}

'equipa'

object CodigoUnicoEquipa{
}

object Acronimo{
}

object DesignacaoEquipa{
}

object ObjetivoDistintoEquipa{
}

object ObjetivoDistintoNivel{
}

'colaborador'

object MecanographicNumber{
}

object NomeCurtoColaborador{
}

object DataNascimentoColaborador{
}

object NomeCompletoColaborador{
}

object ContactoColaborador{
}

object LocalResidenciaColaborador{
}

object Concelho{
}

object Distrito{
}

'catalogo servico'

object IdentificadorCatalogo{
}

object TituloCatalogo{
}

object DescricaoBreveCatalogo{
}

object DescricaoCompletaCatalogo{
}

object IconeCatalogo{
}

object CriterioAcessoCatalogo{
}

'servico'

object TituloServico{
}

object DescricaoBreveServico{
}

object DescricaoCompletaServico{
}

object IconeServico{
}

object KeyWordServico{
}

object CodigoUnicoServico{
}

'Formulario'

object IdentificadorFormulario{
}

object NomeFormulario{
}

'Atributo Requerido Formulario'

object AtributoRequeridoFormulario{
}

object NomeVariavelAtributo{
}

object EtiquetaApresentacaoAtributo{
}

object DescricaoAjudaAtributo{
}

object TipoDadosBaseAtributo{
}

object ExpressaoRegularAtributo{
}

'pedido'

object IdentificadorAutomaticoPedido{
}

object DataSolicitacaoPedido{
}

object UrgenciaPedido{
}

object DataLimiteResolucaoPedido{
}

object FicheiroAnexadoPedido{
}

'nivel criticidade'

object EtiquetaNivelCriticidade{
}

object ValorEscalaNivelCriticidade{
}

'utilizador'

object EmailColaborador{
}

entity Funcao{
}

object IdentificadorFuncao{
}

object NivelHierarquico{
}

object IdVersaoHistorico{
}

object DataDoHistorico {
}

object DiaHoraInicioVigorFluxoAtividade {
}

object DiaHoraFimVigorFluxoAtividade {
}

object EstadoFluxo {
}

object IdAtividade {
}

object IdFluxo {
}

Colaborador "1" -- "1" Funcao: desempenha >

Slot "1" -- "1" IdSlot: identificado por >

LocalResidenciaColaborador "1"--"1"Distrito: indica >

Distrito "1"--"1" Concelho: do qual faz parte >

Funcao "1"--"1" IdentificadorFuncao : identificado por >

Funcao "1"--"1" NivelHierarquico : classificado >

Colaborador  "1" -- "1..*" HistoricoPedido : pode consultar >

Colaborador "1" -- "1..*" Servico : especifica/solicita/aprova/resolve >

CatalogoDeServico "1" --* "*" CatalogoDeServico : tem <

CatalogoDeServico "1" --* "1..*" Servico : disponibiliza >

Servico "1" -- "1" Formulario : requer >

Formulario "1" -- "1" Colaborador : preenchido >

Servico "1" -- "1..*" FluxoDeAtividade : especifica >

Colaborador "1" -- "1..*" Pedido : efetua >

FluxoDeAtividade "1" -- "1..*" Atividade : tem >

FluxoDeAtividade "1" -- "1" FluxoDeAtividade : tem >

FluxoDeAtividade "1" <|-- "1" FluxoDeAtividadeSentidoLato: e um <

FluxoDeAtividade "1" <|-- "1" FluxoDeAtividadeSentidoRestrito: e um <

Atividade "1" -- "1" AtividadeManual : é >

Atividade "1" -- "1" AtividadeAutomatica : é >

Atividade "1" -- "1" Colaborador : feita por >

AtividadeAutomatica "1" -- "1" Linguagem : recorre a >

Atividade "1" -- "1" Equipa : feita por >

AtividadeManual "1" -- "1" Formulario : pode requerer >

Script "1" -- "1" AtividadeAutomatica: utiliza <

Colaborador "1" -- "1..*" Colaborador : responsavel por

Colaborador "1" -- "1..*" CatalogoDeServico : especifica >

Equipa "1" -- "*" Colaborador : tem >

Equipa "1..*" -- "1" TipoEquipa : tem <

Formulario "1" -- "1" ScriptValidacaoFormulario : validado por >

Pedido "1" -- "1" EstagioPedido : encontra-se >

Pedido "1" -- "1" ResultadoPedido : finaliza com >

HistoricoPedido "1..*" -- "1" Pedido : contém <

HistoricoPedido "1"--"1" IdVersaoHistorico: identificado >

HistoricoPedido "1"--"1"DataDoHistorico:registado em >

Servico "1" -- "1" RequereFeedBack : pode ter >

Pedido "1" -- "1" FeedBack : avaliado por >

Pedido "1" -- "1" EstadoPedido : pode estar >

Servico "1" -- "1" NivelCriticidade : rege-se >

Servico "1" -- "1" EstadoServico : encontra-se

Servico "1" -- "1..*" ObjetivoEspecifico : possui >

NivelCriticidade "1" -- "1" DesignacaoNivelCriticidade : descrito por >

NivelCriticidade "1" -- "1..*" CatalogoDeServico : afeta >

NivelCriticidade "1" -- "1..*" ObjetivoDistintoNivel : pode ter >

'relacoes atributos'

TipoEquipa "1" -- "1" Cor : reconhecido por >

TipoEquipa "1" -- "1" CodigoInternoUnicoTipoEquipa : identificado por >

TipoEquipa "1" -- "1" DescricaoTipoEquipa : descrito por >

Equipa "1" -- "1..*" ObjetivoDistintoEquipa : define >

Equipa "1" -- "1" Acronimo : referenciado por >

Equipa "1" -- "1" CodigoUnicoEquipa : identificado por  >

Equipa "1" -- "1" DesignacaoEquipa : contem >

Colaborador "1" -- "1" MecanographicNumber : identificado por >

Colaborador "1" -- "1" NomeCurtoColaborador : reconhecido por >

Colaborador "1" -- "1" DataNascimentoColaborador : nasceu em >

Colaborador "1" -- "1" NomeCompletoColaborador : chama-se >

Colaborador "1" -- "1" ContactoColaborador : possui >

Colaborador "1" -- "0..1" LocalResidenciaColaborador : reside em >

CatalogoDeServico "1" -- "1" IdentificadorCatalogo : identificado por >

CatalogoDeServico "1" -- "1" TituloCatalogo : entitulado >

CatalogoDeServico "1" -- "1" DescricaoBreveCatalogo : descrito por >

CatalogoDeServico "1" -- "1" DescricaoCompletaCatalogo : possui >

CatalogoDeServico "1" -- "1" IconeCatalogo : contém >

CatalogoDeServico "1" -- "1..*" CriterioAcessoCatalogo : contém >

Pedido "1" -- "1" IdentificadorAutomaticoPedido : caracterizado por >

Pedido "1" -- "1" DataSolicitacaoPedido : possui >

Pedido "1" -- "1" Servico : referente a >

Pedido "1" -- "0..*" FicheiroAnexadoPedido : pode ter >

Pedido "1" -- "1" DataLimiteResolucaoPedido : possui >

Pedido "1" -- "1" UrgenciaPedido : pode ter >

Servico "1" -- "1" TituloServico : identificado por >

Servico "1" -- "1" DescricaoBreveServico : descrito por >

Servico "1" -- "1" DescricaoCompletaServico : possui >

Servico "1" -- "1" IconeServico : contem >

Servico "1..*" -- "1..*" KeyWordServico : contem >

Formulario "1" -- "1..*" AtributoRequeridoFormulario: constituido por >

FluxoDeAtividade "1"--"1..*" Slot: constituido por >

FluxoDeAtividade "1"--"1" DiaHoraInicioVigorFluxoAtividade: entra em vigor >

FluxoDeAtividade "1"--"1" DiaHoraFimVigorFluxoAtividade: sem efeito após >

FluxoDeAtividade "1"--"1" EstadoFluxo: encontra-se em >

FluxoDeAtividade "1" -- "1" IdFluxo: identificado por >

Slot "1" -- "1" Atividade: tem >

Slot "1"-- "1" OrdemDeExecucaoAtividade: tem >

AtributoRequeridoFormulario "1" -- "1" NomeVariavelAtributo : tem >

AtributoRequeridoFormulario "1" -- "1" EtiquetaApresentacaoAtributo : detém >

AtributoRequeridoFormulario "1" -- "1" DescricaoAjudaAtributo : descrito por >

AtributoRequeridoFormulario "1" -- "1" TipoDadosBaseAtributo : tem >

AtributoRequeridoFormulario "1" -- "1" ExpressaoRegularAtributo : tem >

Formulario "1" -- "1" IdentificadorFormulario : identificado por >

Formulario "1" -- "1" NomeFormulario : tem >

Colaborador "1" -- "1" EmailColaborador : caracterizado por >

NivelCriticidade "1" -- "1" EtiquetaNivelCriticidade : identificado por >

NivelCriticidade "1" -- "1" ValorEscalaNivelCriticidade : caracterizado por >

NivelCriticidade "1" -- "1" Cor : caracterizado por >

Servico "1" -- "1" CodigoUnicoServico : identificado por >

Atividade "1" -- "1" IdAtividade : identificado por >

Atividade "1" -- "1" EstadoAtividade : possui >

Atividade "1" -- "1" Delay : pode ter >

@enduml